--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.yamamz.materialgpsapp"
         minSdkVersion 16
-        targetSdkVersion 25
-        versionCode 12
-        versionName "1.1.3"
+        targetSdkVersion 26
+        versionCode 14
+        versionName "0.13"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -19,6 +20,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+
 }
 
 dependencies {
@@ -27,11 +30,24 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.afollestad.material-dialogs:core:0.9.4.5'
-    compile 'com.google.android.gms:play-services-maps:11.0.2'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.afollestad.material-dialogs:core:0.9.4.5'
+    implementation 'com.google.android.gms:play-services-maps:11.4.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.18'
+    implementation "org.jetbrains.anko:anko-coroutines:0.10.1"
+    testImplementation 'junit:junit:4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
+    google()
+}
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
 }
