--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
 
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -44,7 +45,7 @@
             android:value="@integer/google_play_services_version"/>
 
         <service
-            android:name=".service.MyService"
+            android:name=".service.locationService"
             android:enabled="true"
             android:exported="true"
         />
