--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.afollestad.material-dialogs:core:0.9.4.5'
     implementation 'com.google.android.gms:play-services-maps:11.4.2'
-      implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.google.android.gms:play-services-location:11.4.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.18'
@@ -53,3 +53,4 @@ kotlin {
         coroutines "enable"
     }
 }
+apply plugin: 'kotlin-android-extensions'
