--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:installLocation="auto"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.yamamz.materialgpsapp">
-
+    package="com.yamamz.materialgpsapp"
+    android:installLocation="auto">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
 
     <application
         android:name=".MyApplication"
@@ -19,38 +17,41 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-
         <activity
             android:name=".locDetails"
             android:label="@string/title_activity_loc_details"
             android:parentActivityName=".MainActivity"
-            tools:targetApi="jelly_bean"/>
+            tools:targetApi="jelly_bean" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyC5-1JlY1Ykc02BNocm8i2wL4OTevClYv8"/>
-
+            android:value="AIzaSyC5-1JlY1Ykc02BNocm8i2wL4OTevClYv8" />
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
+            android:value="@integer/google_play_services_version" />
 
         <service
             android:name=".service.locationService"
             android:enabled="true"
-            android:exported="true"
-        />
+            android:exported="true" />
+
+        <activity
+            android:name=".PlotActivity"
+            android:label="@string/title_activity_plot"
+            android:theme="@style/AppTheme.NoActionBar">
 
 
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
